--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="text-group">
                 <div class="text">
                     <a href="https://en.wikipedia.org/wiki/Temperature"><p class="temperature btn">Temperature</p></a>
-                    <a href="./styles/formula.html"><p class="formula btn">Formula</p></a>
+                    <a href="./styles/formula.html" target="_blank"><p class="formula btn">Formula</p></a>
                     <a href="https://www.linkedin.com/in/abhinav-rajpati-551544250/"><p class="about-me btn">About me </p></a>
                     <a href="mailto:abhinavrajpati3344@gmail.com"><p class="contact-us btn" >Contact us</p></a>
                 </div>
