--- a/styles/formula.html
+++ b/styles/formula.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   <div id="image-container">
-    <img id="image" src="../assets/test.png" alt="Scrolling Image">
+    <img id="image" src="../assets/test.jpg" alt="Scrolling Image">
   </div>
 </body>
 </html>
